# matmul-experiments

./: CMakeLists.txt  LICENSE  README.md
matmul_mkl/program_01/program_01_de/: CMakeLists.txt  core.c  wrapper.c
matmul_naive/program_01/program_01_de/: CMakeLists.txt  codelet.data  core.c  wrapper.c
matmul_omp/program_01/program_01_de/: CMakeLists.txt  codelet.conf  core.c  measure.c  wrapper.c
