cmake_minimum_required(VERSION 3.16)
project(matmul_mkl)
add_executable(wrapper_mkl core.c wrapper.c main.c measure.c)
target_compile_options(wrapper_mkl PRIVATE -std=c99)
target_include_directories(wrapper_mkl PRIVATE /opt/intel/oneapi/mkl/latest/include)
target_link_libraries(wrapper_mkl mkl_intel_lp64 mkl_sequential mkl_core pthread m dl)
